# project

./: README.md
fwwb/: data_filter.py  data_pre.py
fwwb/data/: data.xlsx
fwwb/original_data/: 20221221114003_639.xlsx
project_d/TestImageAnalyze/: settings.gradle
project_d/TestImageAnalyze/app/: build.gradle
project_d/TestImageAnalyze/app/src/main/: AndroidManifest.xml
project_d/TestImageAnalyze/gradle/wrapper/: gradle-wrapper.properties
project_d/debug_v7/utils/: rec_slim_opt.nb
project_d/debug_v71/utils/: det_slim_opt.nb
project_d/java_jni/: CMakeLists.txt  MyJNI.java  wutils.cpp  wutils.h  wz.cpp
project_d/java_jni/build1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project_d/java_jni/com/champer/imageanalyze/: ImageAnalyzeTool.java
project_d/java_jni/cpp/: ImageAnalyzeTool.cpp  utils.cpp
project_d/java_jni/include/: ImageAnalyzeTool.h  MyJNI.h  utils.h
project_d/test/: CMakeLists.txt  build.sh
project_d/test/cpp/: ImageAnalyzeTool.cpp  utils.cpp
project_d/test1/: CMakeLists.txt
project_d/test1/com/champer/imageanalyze/: ImageAnalyzeTool.java
project_d/test1/cpp/: ImageAnalyzeTool.cc  ocr_db_crnn.cc  utils.cc
project_d/test1/include/: utils.h
project_d/test1_v7/: CMakeLists.txt
project_d/test1_v7/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
project_d/test1_v7/com/champer/imageanalyze/: ImageAnalyzeTool.java
project_d/test1_v7/cpp/: ImageAnalyzeTool.cc  ocr_db_crnn.cc  utils.cc
project_d/test1_v7/include/: ocr_db_crnn.h  paddle_use_kernels.h  paddle_use_ops.h  utils.h
project_d/test1_v7/inference_lite_lib.android.armv7/cxx/include/: paddle_use_kernels.h
project_d/test2/: CMakeLists.txt
project_d/test2/cpp/: ImageAnalyzeTool.txt  ocr_db_crnn.cc  utils.cc  wz.cc
project_d/test2/include/: com_champer_imageanalyze_ImageAnalyzeTool.h  ocr_db_crnn.h  utils.h
project_d/test_v7/com/champer/imageanalyze/: ImageAnalyzeTool.java
project_d/test_v7/cpp/: ImageAnalyzeTool.cc  utils.cc
project_d/test_v7/include/: com_champer_imageanalyze_ImageAnalyzeTool.h  ocr_db_crnn.h  utils.h
project_d/test_v7/inference_lite_lib.android.armv7/cxx/include/: paddle_use_ops.h
project_d/test_v8/: CMakeLists.txt  build.sh
project_d/test_v8/build.lite.android.armv8.clang.opencl/: CMakeCache.txt  Makefile  all_kernel_faked.h  cmake_install.cmake  kernel_src_map.h  kernels_src_list.txt  lite_libs.txt  ops_src_list.txt  supported_kernel_op_info.h
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/api/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/api/android/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/backends/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/backends/apu/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/core/: Makefile  cmake_install.cmake  version.h
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/kernels/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/model_parser/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/operators/: Makefile  cmake_install.cmake
project_d/test_v8/build.lite.android.armv8.clang.opencl/lite/utils/: Makefile  cmake_install.cmake
project_d/test_v8/cpp/: ImageAnalyzeTool.cc  ocr_db_crnn.cc  utils.cc
project_d/test_v8/inference_lite_lib.android.armv8.opencl/cxx/include/: paddle_use_kernels.h
(+102 files in other folders)
